--- a/package.json
+++ b/package.json
@@ -3,10 +3,9 @@
   "version": "1.0.0",
   "description": "",
   "main": "index.js",
-  "type": "module",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-     "start": "nodemon index.js"
+    "start": "nodemon index.js"
   },
   "repository": {
     "type": "git",
@@ -15,17 +14,18 @@
   "keywords": [],
   "author": "",
   "license": "ISC",
-
   "bugs": {
     "url": "https://github.com/oyindamola12/chowbot/issues"
   },
   "homepage": "https://github.com/oyindamola12/chowbot#readme",
   "dependencies": {
-    "axios": "^1.13.2",
+    "axios": "^1.13.5",
     "body-parser": "^2.2.1",
-    "dotenv": "^17.2.3",
+    "dotenv": "^17.3.1",
+    "expres": "^0.0.5",
     "express": "^5.2.1",
-    "node-fetch": "^3.3.2"
+    "node-fetch": "^3.3.2",
+    "twilio": "^5.12.1"
   },
   "devDependencies": {
     "nodemon": "^3.1.11"
